update `wgpu` from `0.19.4.1` to `22.1.0.5` (#289)
* update wgpu from 0.19.4.1 to 22.1.0.5

* update littlekt version snapshot to 0.11.0

* update CHANGELOG.md

* update README.md